--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                     
                     Au-delà de la technique, je valorise les environnements collaboratifs où l'entraide et le partage de connaissances sont au cœur des projets. Mon objectif est de contribuer à des réalisations impactantes tout en continuant à évoluer en tant que professionnel.  
                     
-                    N'hésitez pas à parcourir mon portfolio pour découvrir mes projets et réalisations !    
-                    Si vous souhaitez ajouter ou modifier certaines sections, dites-moi! 😊</p> 
+                    N'hésitez pas à parcourir mon portfolio pour découvrir mes projets et réalisations !</p> 
                     <audio controls>
                         <source src="audio/audio.mp3" type="audio/mp3">
                     </audio>
